--- a/src/main/resources/templates/xox.html
+++ b/src/main/resources/templates/xox.html
@@ -1,13 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" th:href="@{/style.css}">
+    <title>Tic Tac Toe</title>
 </head>
 <body>
-XOX
+<div class="container">
+    <h1 class="title">Tic <span>Tac</span> Toe</h1>
+    <div class="status-action">
+        <div class="status">× is next</div>
+        <div class="reset">Reset</div>
+    </div>
+    <div class="game-grid">
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+        <div class="game-cell"></div>
+    </div>
+</div>
 </body>
 </html>
