--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -26,7 +26,7 @@ body {
   color: #F2EBD3;
 }
 
-.status-action {
+.status-div {
   display: flex;
   margin-top: 25px;
   font-size: 25px;
@@ -35,14 +35,6 @@ body {
 }
 
 .status span {
-  color: #F2EBD3;
-}
-
-.reset {
-  cursor: pointer;
-}
-
-.reset:hover {
   color: #F2EBD3;
 }
 
