added client side gui update on async board change

--- a/src/main/resources/templates/xox.html
+++ b/src/main/resources/templates/xox.html
@@ -18,15 +18,15 @@
         <div class="status-text">It's Maex' turn.</div>
     </div>
     <div class="game-grid">
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
-        <div class="game-cell"></div>
+        <div id='00' class="game-cell"></div>
+        <div id='10' class="game-cell"></div>
+        <div id='20' class="game-cell"></div>
+        <div id='01' class="game-cell"></div>
+        <div id='11' class="game-cell"></div>
+        <div id='21' class="game-cell"></div>
+        <div id='02' class="game-cell"></div>
+        <div id='12' class="game-cell"></div>
+        <div id='22' class="game-cell"></div>
     </div>
 </div>
 </body>
