Enables registration of actions as click handlers and sending to API

--- a/src/main/resources/templates/xox.html
+++ b/src/main/resources/templates/xox.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" th:href="@{/style.css}">
+    <script type="text/javascript" th:src="@{/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/xox.js}"></script>
     <script type="text/javascript" th:src="@{/md5.js}"></script>
     <script type="text/javascript" th:src="@{/asyncGet.js}"></script>
