--- a/src/main/resources/templates/xox.html
+++ b/src/main/resources/templates/xox.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" th:href="@{/style.css}">
     <script type="text/javascript" th:src="@{/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/cookieutils.js}"></script>
     <script type="text/javascript" th:src="@{/xox.js}"></script>
     <script type="text/javascript" th:src="@{/md5.js}"></script>
     <script type="text/javascript" th:src="@{/asyncGet.js}"></script>
@@ -16,7 +17,7 @@
 <div id='xox-container' class="container">
     <h1 class="title">X<span>O</span>X</h1>
     <div class="status-div">
-        <div class="status-text">It's Maex' turn.</div>
+        <div class="status-text" id="status-bar">It's Maex' turn.</div>
     </div>
     <div class="game-grid">
         <div id='00' class="game-cell"></div>
