--- a/src/main/resources/templates/xox.html
+++ b/src/main/resources/templates/xox.html
@@ -17,7 +17,7 @@
 <div id='xox-container' class="container">
     <h1 class="title">X<span>O</span>X</h1>
     <div class="status-div">
-        <div class="status-text" id="status-bar">It's Maex' turn.</div>
+        <div class="status-text" id="status-bar"></div>
     </div>
     <div class="game-grid">
         <div id='00' class="game-cell"></div>
