--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,67 @@
+.big-checkbox {width: 30px; height: 30px;}
+
+/* https://codepen.io/P1N2O/pen/pyBNzX */
+body{
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+.container{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.title {
+  margin-top: 8px;
+  margin-bottom: 64px;
+}
+
+.fill {
+  min-width: 29rem;
+  max-width: 58rem;
+  margin: 0 auto;
+  min-height: 100vh;
+  height: 100%;
+}
+
+.fillinner {
+  width:90%;
+  margin: auto;
+}
+
+.payload {
+  min-width: 22rem
+}
+
+.invalid {
+  border-color: #dc3545;
+}
+
+.navbar-nav {
+  flex-direction: row;
+}
+
+#addButton{
+  display: inline-block;
+  vertical-align: top;
+}
+
+/*Xox specific styles.*/
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,10 +75,12 @@ body {
   justify-content: center;
 }
 
-.container {
+#xox-container {
   background: #14BDAC;
-  margin: 50px;
-  padding: 50px;
+  /*margin: 50px;*/
+
+  /*// seems like the padding would have to adapt to the surrounding container width...*/
+  padding: 75px;
   border-radius: 25px;
 }
 
