--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -105,22 +105,43 @@ body {
 }
 
 .game-grid {
+  grid-gap: 6px 6px;
+  margin: 30px;
   background: #0DA192;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 15px;
-  margin-top: 50px;
+  grid-auto-rows: 1fr;
 }
+
+.game-grid::before {
+  content: '';
+  width: 0;
+  padding-bottom: 100%;
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
+}
+
+.game-grid > *:first-child {
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
+}
+
+/* Just to make the grid visible */
+
+/*.game-grid > * {*/
+/*  background: rgba(0,0,0,0.1);*/
+/*  border: 5px #545454 solid;*/
+/*}*/
 
 .game-cell {
   background: #14BDAC;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   cursor: pointer;
-  height: 200px;
-  width: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .x,
@@ -141,44 +162,4 @@ body {
 
 .won::after {
   color: #BD022F;
-}
-
-@media only screen and (max-width: 1024px) {
-  .game-grid {
-    margin-top: 25px;
-    grid-gap: 10px;
-  }
-
-  .game-cell {
-    height: 150px;
-    width: 150px;
-  }
-
-  .x::after {
-    font-size: 150px;
-  }
-
-  .o::after {
-    font-size: 175px;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  .container {
-    margin: 25px;
-    padding: 25px;
-  }
-
-  .game-cell {
-    height: 100px;
-    width: 100px;
-  }
-
-  .x::after {
-    font-size: 100px;
-  }
-
-  .o::after {
-    font-size: 125px;
-  }
 }
