--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,130 +1,139 @@
-.big-checkbox {width: 30px; height: 30px;}
-
-/* https://codepen.io/P1N2O/pen/pyBNzX */
-body{
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+.big-checkbox {
+    width: 30px;
+    height: 30px;
 }
 
-.container{
-  padding-left: 0px;
-  padding-right: 0px;
+/* https://codepen.io/P1N2O/pen/pyBNzX */
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+.container {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+/** ensures the media selector does not jump for BIG screens, so that the full board still fits*/
+#RowDivWithBackground {
+    max-width: 960px;
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .title {
-  margin-top: 8px;
-  margin-bottom: 64px;
+    margin-top: 8px;
+    margin-bottom: 64px;
 }
 
 .fill {
-  min-width: 29rem;
-  max-width: 58rem;
-  margin: 0 auto;
-  min-height: 100vh;
-  height: 100%;
+    min-width: 28rem;
+    max-width: 58rem;
+    margin: 0 auto;
+    min-height: 100vh;
+    height: 100%;
 }
 
 .fillinner {
-  width:90%;
-  margin: auto;
+    width: 90%;
+    margin: auto;
 }
 
-.payload {
-  min-width: 22rem
-}
+/*.payload {*/
+/*  min-width: 22rem*/
+/*}*/
 
 .invalid {
-  border-color: #dc3545;
+    border-color: #dc3545;
 }
 
 .navbar-nav {
-  flex-direction: row;
+    flex-direction: row;
 }
 
-#addButton{
-  display: inline-block;
-  vertical-align: top;
+#addButton {
+    display: inline-block;
+    vertical-align: top;
 }
 
 /*Xox specific styles.*/
 
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  color: #545454;
-  display: flex;
-  font-family: sans-serif;
-  justify-content: center;
+    color: #545454;
+    display: flex;
+    font-family: sans-serif;
+    justify-content: center;
 }
 
 #xox-container {
-  background: #14BDAC;
-  /*margin: 50px;*/
+    background: #14BDAC;
+    /*margin: 50px;*/
 
-  /*// seems like the padding would have to adapt to the surrounding container width...*/
-  padding: 75px;
-  border-radius: 25px;
+    /*// seems like the padding would have to adapt to the surrounding container width...*/
+    padding: 75px;
+    border-radius: 25px;
 }
 
 .title {
-  text-align: center;
+    text-align: center;
 }
 
 .title span {
-  color: #F2EBD3;
+    color: #F2EBD3;
 }
 
 .status-div {
-  display: flex;
-  margin-top: 25px;
-  font-size: 25px;
-  justify-content: space-around;
-  height: 30px;
+    display: flex;
+    margin-top: 25px;
+    font-size: 25px;
+    justify-content: space-around;
+    height: 30px;
 }
 
 .status span {
-  color: #F2EBD3;
+    color: #F2EBD3;
 }
 
 .game-grid {
-  grid-gap: 6px 6px;
-  margin: 30px;
-  background: #0DA192;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-auto-rows: 1fr;
+    max-width: unset;
+    grid-gap: 6px 6px;
+    margin: 30px;
+    background: #0DA192;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
 }
 
 .game-grid::before {
-  content: '';
-  width: 0;
-  padding-bottom: 100%;
-  grid-row: 1 / 1;
-  grid-column: 1 / 1;
+    content: '';
+    width: 0;
+    padding-bottom: 100%;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
 }
 
 .game-grid > *:first-child {
-  grid-row: 1 / 1;
-  grid-column: 1 / 1;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
 }
 
 /* Just to make the grid visible */
@@ -135,31 +144,31 @@ body {
 /*}*/
 
 .game-cell {
-  background: #14BDAC;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
+    background: #14BDAC;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
 }
 
 .x,
 .o {
-  cursor: default;
+    cursor: default;
 }
 
 .x::after {
-  content: '×';
-  font-size: 200px;
+    content: '×';
+    font-size: 200px;
 }
 
 .o::after {
-  content: '○';
-  color: #F2EBD3;
-  font-size: 225px;
+    content: '○';
+    color: #F2EBD3;
+    font-size: 225px;
 }
 
 .won::after {
-  color: #BD022F;
+    color: #BD022F;
 }
