--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,10 +4,12 @@
 }
 
 /* https://codepen.io/P1N2O/pen/pyBNzX */
+/* removed animation tag - overly intense CPU consumption:
+    animation: gradient 15s ease infinite;
+ */
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
 }
 
 .container {
